# azure-iot-gateway-sdk

./: CMakeLists.txt  dependencies.cmake  gatewayFunctions.cmake
bindings/dotnet/: CMakeLists.txt
bindings/java/: CMakeLists.txt
bindings/native/: CMakeLists.txt
bindings/native/inc/: native.h
bindings/native/src/: native.c
bindings/nodejs/: CMakeLists.txt
bindings/nodejs/inc/: modules_manager.h
bindings/nodejs/src/: modules_manager.cpp  nodejs.cpp
core/: CMakeLists.txt  azure_iot_gateway_sdkConfig.cmake
core/devdoc/outproc_modules/: on-out-process-gateway-modules.md  outprocess-gateway-modules.vsdx
core/inc/: gateway_package_manager.h  module_loader.h
core/inc/module_loaders/: node_loader.h
core/src/: broker.c  gateway.c  gateway_internal.c  module_loader.c
core/src/internal/: event_system.c
core/src/module_loaders/: dynamic_loader.c  node_loader.c
modules/: CMakeLists.txt
modules/azure_functions/: CMakeLists.txt
modules/ble/: CMakeLists.txt
modules/identitymap/: CMakeLists.txt
modules/iothub/: CMakeLists.txt
modules/logger/: CMakeLists.txt
modules/logger/inc/: logger.h
modules/logger/src/: logger.c
proxy/gateway/native/src/: proxy_gateway.c
proxy/modules/native_module_host/: CMakeLists.txt
proxy/modules/native_module_host/src/: native_module_host.c
samples/java_sample/src/: java_sample_win.json
samples/nodejs_simple_sample/: CMakeLists.txt
samples/nodejs_simple_sample/nodejs_modules/: iothub_writer.js  package.json  printer.js  sensor.js
samples/nodejs_simple_sample/src/: gateway_sample_lin.json
